css/main.css
/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */

body {
  background: url(../img/bgr/Artboard.svg) no-repeat;
  background-size: cover;
  margin: 0;
  padding: 0;
  font-family: "Roboto", sans-serif;  
  overflow-x: hidden;
}
figure {
  margin: 0;
}
.page {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  margin: 0 auto;
  padding: 0 20px;
  max-width: 1210px;
  color: white;
}

@media (max-width: 320px) {

}

